--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
       rel="stylesheet"
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="bower_components/aos/dist/aos.css" />
   </head>
   <body>
     <app-root></app-root>
